# CMakeBasicsWithExamples

./: README.md
cmake-basic-tutorial/: CMakeLists.txt
cmake-shared_static_library/: CMakeLists.txt  Makefile
cmake-shared_static_library/include/: sample.h
cmake-sub-directories-tutorial/: CMakeLists.txt
cmake-sub-directories-tutorial/include/: sample.h
cmake-sub-directories-tutorial/src/: main.cpp  sample.cpp
cmake-test-library/: CMakeLists.txt  main.cpp
cmake-use-threading/: CMakeLists.txt
cmake-use-threading/include/: Base.h
cmake-use-threading/src/: Base.cpp  main.cpp
